@@ -1,4 +1,4 @@
 @set UPDATED 19 May 2010
 @set UPDATED-MONTH May 2010
-@set EDITION 2010-05-19
-@set VERSION 2010-05-19
+@set EDITION 2010-05-20
+@set VERSION 2010-05-20
